-fixed bug with enable and disable of story points entering -fixed bug in visible and hide of final story point row items -modified story of stories in game, avoid duplicates, storySummary was being reused in all games as the same object -modified css for current story name label -moved current story name label to upper row with wrap capability

--- a/public/app.css
+++ b/public/app.css
@@ -10,6 +10,23 @@ body {
      padding: 90px 10px;
 }
 
+div {
+  white-space:normal;
+}
+
+.storyLabel {
+  /*display: inline;*/
+  /*padding: .2em .6em .3em;*/
+  /*font-size: 75%;*/
+  /*font-weight: 700;*/
+  /*line-height: 1;*/
+  color: green;
+  text-align: left;
+  white-space: normal;
+  /*vertical-align: baseline;*/
+  /*border-radius: .25em;*/
+}
+
 #dashboard {
   padding: 100px 10px;
 }
